💄 🐛 Fix right overflow bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ section {
 
 html {
     scroll-behavior: smooth;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -64,7 +66,7 @@ body {
     font-size: var(--fs-body);
     line-height: 1.6;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 section {
@@ -101,18 +103,6 @@ strong { font-weight: var(--fw--bold); }
 }
 
 .service:nth-child(4) {
-    transition-delay: 600ms;
-}
-
-.portfolio__item:nth-child(4n + 1) {
-    transition-delay: 200ms;
-}
-
-.portfolio__item:nth-child(4n + 2) {
-    transition-delay: 400ms;
-}
-
-.portfolio__item:nth-child(4n + 3) {
     transition-delay: 600ms;
 }
 
@@ -212,6 +202,7 @@ h3 { font-size: var(--fs-h3); }
 .logos-animation {
     position: absolute;
     width: 150vw;
+    max-width: 100%;
     height: 1800px;
     background: var(--clr-dark);
     display: flex;
@@ -219,7 +210,7 @@ h3 { font-size: var(--fs-h3); }
     overflow: hidden;
     user-select: none;
 
-    transform: translate(-200px, -800px);
+    transform: translateY(-800px);
 }
 
 @media (min-width: 900px) {
@@ -276,19 +267,19 @@ h3 { font-size: var(--fs-h3); }
 
 @keyframes animate1 {
     0% {
-        transform: translateX(100%);
+        transform: translateX(50%);
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-150%);
     }
 }
 
 @keyframes animate2 {
     0% {
-        transform: translateX(0%);
+        transform: translateX(-50%);
     }
     100% {
-        transform: translateX(-200%);
+        transform: translateX(-250%);
     }
 }
 
@@ -316,6 +307,7 @@ header {
     background: transparent;
     display: flex;
     justify-content: space-between;
+    max-width: 100%;
     padding: 1em;
 }
 
@@ -576,6 +568,10 @@ header {
 
 .about-me__img {
     box-shadow: var(--bs);
+    padding: .5em;
+    border-radius: 20px;
+    background-color: var(--clr-light-transparent);
+    backdrop-filter: blur(6px);
 }
 
 @media (min-width: 600px) {
@@ -606,6 +602,7 @@ header {
     .about-me__img {
         grid-area: img;
         position: relative;
+        top: 2em;
         z-index: 2;
     }
 }
